   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Since build 218:
----------------
 * win32com.mapi
   Addded outlook interface IConverterSession with methods MIMEToMAPI, MAPIToMIMEStm, and SetAdrBook
   Added method OpenStreamOnFile (Nick Czeczulin)
   Ignore PT_MV_TSTRING along with PT_TSTRING (Nick Czeczulin) 

 * Conversions from a Python object to a variant now does a better job at
   deciding what variant type to use, taking into account the size and sign of
   the value (Stefan Schukat via patch #127)

 * Add support for VT_I8 and VT_UI8 when converting a variant into a Python
   object (Stefan Schukat via patch #128)

 * win32com.mapi.exchange
   Added 64-bit support by excluding the 32-bit Ex2kSdk.lib functions from 64-bit builds.
   Unfortunately, this means that only IExchangeManageStore::CreateStoreEntryID
   is currently available in a 64-bit build. (Nick Czeczulin)

* adodbapi updated to version 2.6 -- new examples folder includes short programs for
    reading and writing .xls spreadsheets and reading ACCESS .mdb files using SQL.
  New functions .is64bit.Python() and .is64bit.os() to help pick the correct drivers.
  New function .schema_table.names() returns a list of all tables in a database.
  Ability for a Windows computer to be a database proxy for a remote (Linux or Windows) unit.
    see adodbapi/README.txt for more information.

* Fix issue implementing COM objects from within a virtualenv (Kevin Smyth 
  via issue #3597965)

* Fix some issues using decimal objects with Python 3.3 and later (rupole)

* Add a counterpart to VB's Nothing, from patch 3609027 by Stefan Schukat

* win32api
    Handle REG_QWORD (64-bit ints) (rupole)
    Add GetEnvironmentVariableW and SetEnvironmentVariableW (rupole)
    Fix function pointer check for win32api.GetNativeSystemInfo (bug#665)

* win32com.shell
	Add interfaces IFileOperation and IFileOperationProgressSink